--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 ---
 # Program/Department Title
-title: Center-for-the-Study-of-Force-and-Diplomacy
+title: Center for the Study of Force and Diplomacy
 # Subdirectory (with / at only at beginning)
 baseurl: /center-for-the-study-of-force-and-diplomacy
 
