removed email code

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ address:
   room: 913 
   street: 1115 Polett Walk
   city: Philadelphia, PA 19122
-  email: <a href="mailto:rimmerma@temple.edu">rimmerma@temple.edu</a>
+  email: rimmerma@temple.edu
   phone: 215-204-7466
 
 # Social Media
