--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 ---
 # Program/Department Title
-title: Center for the Study of Force and Diplomacy
+title: Center for Sustainable Communities
 # Subdirectory (with / at only at beginning)
-baseurl: /center-for-the-study-of-force-and-diplomacy
+baseurl: /center-for-sustainable-communities
 # Production domain (without / at the end)
 production: https://www.cla.temple.edu
 
@@ -17,12 +17,12 @@ keywords: highered, college, university, philadelphia, Temple
 
 # Address
 address:
-  building: Gladfelter Hall
-  room: 913 
-  street: 1115 Polett Walk
-  city: Philadelphia, PA 19122
-  email: rimmerma@temple.edu
-  phone: 215-204-7466
+  building: West Hall; Ambler Campus
+  room: 
+  street: 580 Meetinghouse Road
+  city: Ambler, PA
+  email: susan.sacks@temple.edu
+  phone: 267-468-8311
 
 # Social Media
 # Put in only the username unless otherwise noted
@@ -65,9 +65,9 @@ google_analytics:
 google_tag_manager: GTM-58ZL5B
 
 # CSV/JSON/YAML data feeds URLs, to be fetched before each build
-events-feed: https://liberalarts.temple.edu/events/center-for-the-study-of-force-and-diplomacy/csv
-news-feed: https://liberalarts.temple.edu/news/center-for-the-study-of-force-and-diplomacy/csv
-faculty-feed: https://liberalarts.temple.edu/profiles/center-for-the-study-of-force-and-diplomacy/csv
+events-feed: https://liberalarts.temple.edu/events/center-for-sustainable-communities/csv
+news-feed: https://liberalarts.temple.edu/news/center-for-sustainable-communities/csv
+faculty-feed: https://liberalarts.temple.edu/profiles/center-for-sustainable-communities/csv
 
 # Development Config
 # If you do not have access to 'tutheme', use 'minima' instead.
