update email in footer

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ address:
   room: 
   street: 580 Meetinghouse Road
   city: Ambler, PA
-  email: susan.sacks@temple.edu
+  email: Sustainablecommunities@temple.edu 
   phone: 267-468-8311
 
 # Social Media
