--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@ keywords: highered, college, university, philadelphia, Temple
 # Address
 address:
   building: West Hall; Ambler Campus
-  room: 
+  room:
   street: 580 Meetinghouse Road
   city: Ambler, PA
-  email: Sustainablecommunities@temple.edu 
+  email: Sustainablecommunities@temple.edu
   phone: 267-468-8311
 
 # Social Media
@@ -54,20 +54,21 @@ social:
 university:
   name: Temple University
   url: https://temple.edu/
-college: 
+college:
   name: College of Liberal Arts
   url: https://liberalarts.temple.edu/
 
 # Google Tag Manager OR Google Analytics
-google_analytics: 
+google_analytics:
 
 
 google_tag_manager: GTM-58ZL5B
 
 # CSV/JSON/YAML data feeds URLs, to be fetched before each build
 events-feed: https://liberalarts.temple.edu/events/center-for-sustainable-communities/csv
-news-feed: https://liberalarts.temple.edu/news/center-for-sustainable-communities/csv
+news-feed: https://liberalarts.temple.edu/articles/center-for-sustainable-communities/csv
 faculty-feed: https://liberalarts.temple.edu/profiles/center-for-sustainable-communities/csv
+media-mentions-feed: https://liberalarts.temple.edu/media-mentions/center-for-sustainable-communities/csv
 
 # Development Config
 # If you do not have access to 'tutheme', use 'minima' instead.
