--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 ---
 # Program/Department Title
-title: Center for Sustainable Communities
+title: Insitute for Survey Research
 # Subdirectory (with / at only at beginning)
-baseurl: /center-for-sustainable-communities
+baseurl: /insitute-for-survey-research
 # Production domain (without / at the end)
 production: https://www.cla.temple.edu
 
@@ -11,18 +11,18 @@ production: https://www.cla.temple.edu
 # Short tagline for tweets (<100 characters)
 tagline: This is our life's work
 # Longer descriptions for link previews (<250 characters)
-description: 'The Center for the Study of Force and Diplomacy (CENFAD), founded in 1993 by Drs. Richard Immerman, Russell Weigley, and David Rosenberg, fosters interdisciplinary faculty and student research on the historic and contemporary use of force and diplomacy in a global context. CENFAD is housed within Temple University’s History Department.'
+description: 'Temple University Institute for Survey Research (ISR) is one of the oldest and most prestigious academic survey research centers in the U.S., with more than 40 years of experience conducting national, state, and local surveys, statistical research, focus group research, needs assessments, and program evaluations.'
 # List of related keywords for search engines
-keywords: highered, college, university, philadelphia, Temple
+keywords: research, institute, university, philadelphia, Temple
 
 # Address
 address:
-  building: West Hall; Ambler Campus
-  room:
-  street: 580 Meetinghouse Road
-  city: Ambler, PA
-  email: Sustainablecommunities@temple.edu
-  phone: 267-468-8311
+  building: Entertainment and Community Education Center
+  room: Suite 401
+  street: 1509 Cecil B. Moore Ave 
+  city: Philadelphia, PA 19121
+  email: isr.temple.edu
+  phone: 215-204-8355
 
 # Social Media
 # Put in only the username unless otherwise noted
@@ -58,8 +58,8 @@ college:
   name: College of Liberal Arts
   url: https://liberalarts.temple.edu/ 
   
-program_news: https://liberalarts.temple.edu/news/center-for-sustainable-communities/view
-program_events: https://events.temple.edu/department/center-for-sustainable-communities 
+program_news: https://liberalarts.temple.edu/news/insitute-for-survey-research
+program_events: https://events.temple.edu/department/insitute-for-survey-research
 
 
 # Google Tag Manager OR Google Analytics
@@ -69,11 +69,11 @@ google_analytics:
 google_tag_manager: GTM-58ZL5B
 
 # CSV/JSON/YAML data feeds URLs, to be fetched before each build
-events-feed: https://liberalarts.temple.edu/events/center-for-sustainable-communities/csv
-news-feed: https://liberalarts.temple.edu/news/center-for-sustainable-communities/csv
-articles-feed: https://liberalarts.temple.edu/articles/center-for-sustainable-communities/csv
-faculty-feed: https://liberalarts.temple.edu/profiles/center-for-sustainable-communities/csv
-media-mentions-feed: https://liberalarts.temple.edu/media-mentions/center-for-sustainable-communities/csv
+events-feed: https://liberalarts.temple.edu/events/insitute-for-survey-research/csv
+news-feed: https://liberalarts.temple.edu/news/insitute-for-survey-research/csv
+articles-feed: https://liberalarts.temple.edu/articles/insitute-for-survey-research/csv
+faculty-feed: https://liberalarts.temple.edu/profiles/insitute-for-survey-research/csv
+media-mentions-feed: https://liberalarts.temple.edu/media-mentions/insitute-for-survey-research/csv
 
 # Development Config
 # If you do not have access to 'tutheme', use 'minima' instead.
