correct spelling of title and baseurl

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 ---
 # Program/Department Title
-title: Insitute for Survey Research
+title: Institute for Survey Research
 # Subdirectory (with / at only at beginning)
-baseurl: /insitute-for-survey-research
+baseurl: /institute-for-survey-research
 # Production domain (without / at the end)
 production: https://www.cla.temple.edu
 
