updated navigation order

--- a/_data/navigation.yaml
+++ b/_data/navigation.yaml
@@ -1,1 +1,10 @@
-
+- text: Services
+  url: /services/
+- text: Current Projects
+  url: /current-projects/
+- text: Staff
+  url: /staff/
+- text: Data Library
+  url : /data-library/
+- text: Resources
+  url:  /resources/
