--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ keywords: research, institute, university, philadelphia, Temple
 
 # Address
 address:
-  building: Entertainment and Community Education Center
+  building: ECEC
   room: Suite 401
   street: 1509 Cecil B. Moore Ave 
   city: Philadelphia, PA 19121
