email address update

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ address:
   room: Suite 401
   street: 1509 Cecil B. Moore Ave
   city: Philadelphia, PA 19121
-  email: isr.temple.edu
+  email: isr@temple.edu
   phone: 215-204-8355
 
 # Social Media
