--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,11 @@ production: https://www.cla.temple.edu
 # url spits sitemap
 url: http://www.cla.temple.edu/institute-for-survey-research
 
+# Development Config
+# If you do not have access to 'tutheme', use 'minima' instead.
+theme: tutheme
+palette: light #future feature
+
 # Program Information
 # Short tagline for tweets (<100 characters)
 tagline: This is our life's work
@@ -24,6 +29,24 @@ address:
   city: Philadelphia, PA 19121
   email: isr@temple.edu
   phone: 215-204-8355
+
+# University & College Information
+university:
+  name: Temple University
+  url: https://temple.edu/
+college:
+  name: College of Liberal Arts
+  url: https://liberalarts.temple.edu/
+  
+program_news: https://liberalarts.temple.edu/news/institute-for-survey-research
+program_events: https://events.temple.edu/department/institute-for-survey-research
+
+# CSV/JSON/YAML data feeds URLs, to be fetched before each build
+events-feed: https://liberalarts.temple.edu/events/institute-for-survey-research/csv
+news-feed: https://liberalarts.temple.edu/news/institute-for-survey-research/csv
+articles-feed: https://liberalarts.temple.edu/articles/institute-for-survey-research/csv
+faculty-feed: https://liberalarts.temple.edu/profiles/institute-for-survey-research/csv
+media-mentions-feed: https://liberalarts.temple.edu/media-mentions/institute-for-survey-research/csv
 
 # Social Media
 # Put in only the username unless otherwise noted
@@ -50,35 +73,10 @@ social:
   linkedin:
   # Slack - Paste the FULL URL below
   slack:
+  # Google Tag Manager OR Google Analytics
+  google_analytics:
+  google_tag_manager: GTM-58ZL5B
 
-# University & College Information
-university:
-  name: Temple University
-  url: https://temple.edu/
-college:
-  name: College of Liberal Arts
-  url: https://liberalarts.temple.edu/
-  
-program_news: https://liberalarts.temple.edu/news/institute-for-survey-research
-program_events: https://events.temple.edu/department/institute-for-survey-research
-
-
-# Google Tag Manager OR Google Analytics
-google_analytics:
-
-
-google_tag_manager: GTM-58ZL5B
-
-# CSV/JSON/YAML data feeds URLs, to be fetched before each build
-events-feed: https://liberalarts.temple.edu/events/institute-for-survey-research/csv
-news-feed: https://liberalarts.temple.edu/news/institute-for-survey-research/csv
-articles-feed: https://liberalarts.temple.edu/articles/institute-for-survey-research/csv
-faculty-feed: https://liberalarts.temple.edu/profiles/institute-for-survey-research/csv
-media-mentions-feed: https://liberalarts.temple.edu/media-mentions/institute-for-survey-research/csv
-
-# Development Config
-# If you do not have access to 'tutheme', use 'minima' instead.
-theme: tutheme
 
 # Global Site Config
 # DO NOT edit below unless if you know what you're doing!
